--- a/package.json
+++ b/package.json
@@ -3,19 +3,35 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@gear-js/api": "0.31.2",
     "@gear-js/react-hooks": "0.5.18",
     "@gear-js/ui": "0.5.19",
-    "@mantine/form": "6.0.8",
+    "@mantine/carousel": "^6.0.13",
+    "@mantine/core": "^6.0.13",
+    "@mantine/dates": "^6.0.13",
+    "@mantine/dropzone": "^6.0.13",
+    "@mantine/form": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@mantine/modals": "^6.0.13",
+    "@mantine/notifications": "^6.0.13",
+    "@mantine/nprogress": "^6.0.13",
+    "@mantine/prism": "^6.0.13",
+    "@mantine/spotlight": "^6.0.13",
+    "@mantine/tiptap": "^6.0.13",
     "@polkadot/api": "10.7.1",
     "@polkadot/extension-dapp": "0.46.3",
     "@polkadot/react-identicon": "3.1.4",
     "@polkadot/types": "10.7.1",
     "@polkadot/util": "12.2.1",
     "@polkadot/wasm-crypto": "7.2.1",
+    "@tabler/icons-react": "^2.22.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "13.5.0",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "@types/jest": "27.5.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
@@ -23,8 +39,12 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "clsx": "1.2.1",
+    "dayjs": "^1.11.8",
+    "embla-carousel-react": "^8.0.0-rc07",
+    "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.5",
@@ -37,9 +57,6 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -58,7 +75,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.25.0",
     "@typescript-eslint/parser": "5.25.0",
-    "eslint": "8.16.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.8.0",
